# secsgml_rs

./: .gitignore  Cargo.toml  pyproject.toml  readme.md
examples/: process_dir.rs
src/: error.rs  header_mappings.rs  lib.rs  main.rs  parse.rs  python.rs  types.rs  uudecode.rs  write.rs
test_data/: archive.txt  multiplefilers.txt  tab-privacy.txt
test_output/: archive.tar  multiplefilers.tar  tab-privacy.tar
tests/: integration_tests.rs
