[package]
name = "secsgmlrs"
version = "0.1.1"
edition = "2021"
description = "SEC SGML filing parser"
license = "MIT"

[lib]
name = "secsgmlrs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
memchr = "2.7"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[profile.release]
lto = true
codegen-units = 1